# pointless

./: .gitignore  README.md  pyproject.toml  requirements.txt
actions/: dispatcher.py  presentation.py  profiles.py
app/: launcher.py  main.py
core/: config.py
docs/: ARCHITECTURE.md  ROADMAP.md
gestures/: engine.py  rules.py
profiles/: google_meet.json  googleslides_web.json  keynote_mac.json  powerpoint_mac.json  powerpoint_windows.json  zoom.json
scripts/: test_gestures_manual.py
slides/: slides_for_demo.pptx  ~$slides_for_demo.pptx
tests/: test_dispatcher.py  test_gestures.py
ui/: overlay.py
vision/: capture.py  tracker.py
